# rotors_simulator

./: README.md  rotors_hil.rosintall
rotors_comm/: CMakeLists.txt  package.xml
rotors_comm/srv/: RegisterControlSurface.srv  ResetModel.srv
rotors_description/launch/: fixed_wing_display.launch
rotors_description/meshes/techpod/: techpod_body.dae  techpod_elevator.dae  techpod_rudder.dae
rotors_description/rviz/: fw_model_view.rviz
rotors_description/urdf/: ardrone_base.xacro  atlantik_solar.xacro  atlantik_solar_backup.xacro  atlantik_solar_base.xacro  component_snippets.xacro  firefly_base.xacro  fixed_wing_base.xacro  iris_base.xacro  mav_with_wind_gust.gazebo  techpod.xacro  techpod_base.xacro
rotors_evaluation/src/: state_estimator_eval.py
rotors_evaluation/test_bags/: state_estimator.bag
rotors_gazebo/launch/: atlantik_solar_empty_world.launch  atlantik_solar_hil.launch  fixed_wing.launch  fixed_wing_hil.launch  fixed_wing_hil_keyboard_teleop.launch  fixed_wing_keyboard_teleop.launch  fixed_wing_with_joy.launch  mav.launch  mav_with_joy.launch  mav_with_keyboard_control.launch  spawn_fixed_wing.launch  spawn_mav.launch  world.launch
rotors_gazebo/models/cylinder/: model.config  model.sdf
rotors_gazebo/models/grand_canyon/: model.config  model.sdf
rotors_gazebo/models/grass_plane/: model.sdf
rotors_gazebo/models/hemicyl/: custom_wind_field.txt  dummy_wind_field.txt  model.sdf  wind2.txt  wind2equi.txt  wind2equi4.txt  wind3.txt  wind_grid_lin_20.txt
rotors_gazebo/models/rafz/: model.config  rafz_big.sdf  rafz_big_hd.sdf  rafz_small.sdf
rotors_gazebo/models/rafz/materials/scripts/: rafz.material
rotors_gazebo/models/runway/: model.config  model.sdf
rotors_gazebo/models/runway/materials/scripts/: runway.material
rotors_gazebo/models/town_carpet/: model.config  model.sdf
rotors_gazebo/models/uetliberg/: model.config  model.sdf
rotors_gazebo/models/vrc_heightmap_1/: model.sdf
rotors_gazebo/models/vrc_heightmap_1/materials/scripts/: vrc_heightmap_1.material
rotors_gazebo/models/yosemite/: model.config  model.sdf
rotors_gazebo/models/zueri/: model.config  model.sdf
rotors_gazebo/models/zuerifalse/: model.config  model.sdf
rotors_gazebo/models/zurich/: model.config  zurich.sdf
rotors_gazebo/models/zurich/materials/scripts/: zurich.material
rotors_gazebo/resource/fixed_wing/: aerodynamic_params_techpod.yaml  fixed_wing_hil.perspective  techpod.yaml
rotors_gazebo/worlds/: basic.world  cylinder.world  grand_canyon.world  hemicyl.world  kiki.world  outdoor.world  outdoors.world  powerplant.world  rafz.world  test_city.world  uetliberg.world  yosemite.world  zueri.world  zuerifalse.world  zurich.world
rotors_gazebo_gui_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_gazebo_gui_plugins/include/rotors_gazebo_gui_plugins/: gazebo_gui_rotors_toolbar_plugin.h  gazebo_gui_view_control_plugin.h  point_coordinates_dialog.h
rotors_gazebo_gui_plugins/src/: gazebo_gui_rotors_toolbar_plugin.cpp  gazebo_gui_view_control_plugin.cpp  point_coordinates_dialog.cpp
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: aero_visual_plugin.h  common.h  gazebo_aero_surface_plugin.h  gazebo_aerodynamics_plugin.h  gazebo_air_speed_plugin.h  gazebo_bag_plugin.h  gazebo_camera_plugin.h  gazebo_control_surface_plugin.h  gazebo_fixedwing_base_plugin.cpp  gazebo_fixedwing_base_plugin.h  gazebo_gps_plugin.h  gazebo_imu_plugin.h  gazebo_lift_drag_plugin.h  gazebo_magnetometer_plugin.h  gazebo_map_tracker_plugin.h  gazebo_odometry_plugin.h  gazebo_servo_plugin.h  gazebo_static_pressure_temperature_plugin.h  gazebo_view_control_plugin.h  gazebo_wind_plugin.h  gazebo_wing_model.h  gazebo_world_plugin.h  gps_temp.h  gps_test.h  gui_plugin.h  rendering_force.h  rendering_torque.h  sdf_api_wrapper.hpp
rotors_gazebo_plugins/src/: aero_visual_plugin.cpp  gazebo_aero_surface_plugin.cpp  gazebo_aerodynamics_plugin.cpp  gazebo_air_speed_plugin.cpp  gazebo_bag_plugin.cpp  gazebo_camera_plugin.cpp  gazebo_control_surface_plugin.cpp  gazebo_fixedwing_base_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_lift_drag_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_map_tracker_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_pressure_plugin.cpp  gazebo_servo_plugin.cpp  gazebo_static_pressure_temperature_plugin.cpp  gazebo_view_control_plugin.cpp  gazebo_wind_plugin.cpp  gazebo_wing_model.cpp  gazebo_world_plugin.cpp  gps_temp.cpp  gps_test.cpp  gui_plugin.cpp  rendering_force.cpp  rendering_torque.cpp
rotors_gazebo_plugins/srv/: RegisterAeroSurface.srv
rotors_hil_interface/: CMakeLists.txt  package.xml
rotors_hil_interface/include/rotors_hil_interface/: hil_control_interface.h  hil_interface.h  hil_interface_node.h  hil_listeners.h  hil_sensors_interface.h  test.h
rotors_hil_interface/src/: hil_control_interface.cpp  hil_interface_node.cpp  hil_sensor_level_interface.cpp  hil_sensors_interface.cpp  hil_state_level_interface.cpp  test.cpp
rotors_joy_interface/include/rotors_joy_interface/: key_teleop.h
rotors_joy_interface/src/: joy.cpp  key_teleop.cpp
rotors_key_teleop/: CMakeLists.txt  package.xml
rotors_key_teleop/include/rotors_key_teleop/: key_teleop.h
rotors_key_teleop/launch/: key_teleop.launch
rotors_key_teleop/src/: key_teleop.cpp
rotors_mavlink_interface/: CMakeLists.txt  package.xml
rotors_mavlink_interface/include/rotors_mavlink_interface/: mavlink_interface.h  ping_mav.h
rotors_mavlink_interface/launch/: ping_all_mavs.launch
rotors_mavlink_interface/src/: mavlink_interface.cpp  ping_mav.cpp
rotors_simulator/: package.xml
rqt_rotors/: CMakeLists.txt  package.xml
rqt_rotors/resource/: hil_widget.ui  mav_mode_widget.ui  teleop_widget.ui
rqt_rotors/src/rqt_rotors/: hil_widget.py  mav_mode_widget.py  rotors.py  teleop_widget.py
