<package>
  <name>rotors_gazebo_gui_plugins</name>
  <version>2.0.1</version>
  <description>The rotors_gazebo_gui_plugins package</description>

  <maintainer email="pvechersky@gmail.com">Pavel Vechersky</maintainer>

  <author>Pavel Vechersky</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

</package>
